{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 281,
  "lineage": "c04f9340-a0e0-0a86-72d7-312c930b54c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163532934262:internet-gateway/igw-0121548fcb072899f",
            "id": "igw-0121548fcb072899f",
            "owner_id": "163532934262",
            "vpc_id": "vpc-0b8f1b7664f700f8b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3f0bbfb5d5318ed",
            "original_route_table_id": "rtb-0863d1b9a615b2274",
            "route_table_id": "rtb-00fbda606ca1af6ee",
            "vpc_id": "vpc-0b8f1b7664f700f8b"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.r",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163532934262:route-table/rtb-00fbda606ca1af6ee",
            "id": "rtb-00fbda606ca1af6ee",
            "owner_id": "163532934262",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0121548fcb072899f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b8f1b7664f700f8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163532934262:security-group/sg-085b8444d913f243f",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-085b8444d913f243f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "168.31.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_access",
            "name_prefix": "",
            "owner_id": "163532934262",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "emr_test"
            },
            "tags_all": {
              "name": "emr_test"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8f1b7664f700f8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163532934262:subnet/subnet-0faf6c1ad8daae221",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "168.31.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0faf6c1ad8daae221",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "163532934262",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "emr_test"
            },
            "tags_all": {
              "name": "emr_test"
            },
            "vpc_id": "vpc-0b8f1b7664f700f8b"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:163532934262:vpc/vpc-0b8f1b7664f700f8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "168.31.0.0/16",
            "default_network_acl_id": "acl-0d90daef9b0d2cc6a",
            "default_route_table_id": "rtb-0863d1b9a615b2274",
            "default_security_group_id": "sg-0d4610f8d7c885dfe",
            "dhcp_options_id": "dopt-087f731bd78a685f2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b8f1b7664f700f8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0863d1b9a615b2274",
            "owner_id": "163532934262",
            "tags": {
              "name": "emr_test"
            },
            "tags_all": {
              "name": "emr_test"
            }
          }
        }
      ]
    }
  ]
}